release 3.11.6 fix anticon vertical align

--- a/components/style/mixins/iconfont.less
+++ b/components/style/mixins/iconfont.less
@@ -2,7 +2,7 @@
   display: inline-block;
   font-style: normal;
   // vertical-align: -0.125em; // for SVG icon, see https://blog.prototypr.io/align-svg-icons-to-text-and-say-goodbye-to-font-icons-d44b3d7b26b4
-  vertical-align: baseline;
+  vertical-align: 0.125em;
   text-align: center;
   text-transform: none;
   line-height: 0;
